updated index page - added tags for sections

--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,39 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
-    <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/products.html"></include>
-    <include src="./partials/made.html"></include>
-    <include src="./partials/gallery.html"></include>
-    <include src="./partials/slider.html"></include>
-    <include src="./partials/work_plan.html"></include>
-    <include src="./partials/footer.html"></include>
+    <header class="header">
+      <include src="./partials/header.html"></include>
+    </header>
+
+    <main class="main">
+      <section class="hero">
+        <include src="./partials/hero.html"></include>
+      </section>
+
+      <section class="products">
+        <include src="./partials/products.html"></include>
+      </section>
+
+      <section class="made">
+        <include src="./partials/made.html"></include>
+      </section>
+
+      <section class="gallery">
+        <include src="./partials/gallery.html"></include>
+      </section>
+
+      <section class="slider">
+        <include src="./partials/slider.html"></include>
+      </section>
+
+      <section class="work_plan">
+        <include src="./partials/work_plan.html"></include>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <include src="./partials/footer.html"></include>
+    </footer>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
