Создает структуру проекта

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>icecream</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/page-header.html"></include>
+
+    <include src="./partials/hero.html"></include>
+
+    <include src="./partials/products.html"></include>
+
+    <include src="./partials/benefits.html"></include>
+
+    <include src="./partials/testimonials.html"></include>
+
+    <include src="./partials/contacts.html"></include>
+
+    <include src="./partials/page-footer.html"></include>
+
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
