Обновила стили формы
планшет и десктоп

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <include src='./partials/hero.html'></include>
-  <include src='./partials/advantages.html'></include>
+  <!-- <include src='./partials/hero.html'></include> -->
+  <!-- <include src='./partials/advantages.html'></include> -->
 
   <include src='./partials/form.html'></include>
 
