--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <include src="./partials/our-programm.html"></include>
     <include src="./partials/teacher.html"></include>
     <include src="./partials/our_guarantees.html"></include>
-    <include src="./partials/registration-form.htm"></include>
+    <include src="./partials/registration-form.html"></include>
     <include src="./partials/clients.html"></include>
     <include src="./partials/page-footer.html"></include>
     
