Добавляет оптимизированный sprite и паршали для backdrop

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     </main>
       
     <include src="./partials/page-footer.html"></include>
+    <include src="./partials/backdrop.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
