--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </header>
 
   <main>
-    <include src="./partials/example.html"></include>
+    <include src="./partials/we_garants_comments.html"></include>
   </main>
 
   <footer>
