--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>Ice cream</title>
 
     <link
       rel="stylesheet"
@@ -21,6 +21,7 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/traditions.html"></include>
+    <include src="./partials/reviews-bg-photo.html"></include>
     <include src="./partials/reviews.html"></include>
     <include src="./partials/locations.html"></include>
     <include src="./partials/footer.html"></include>
