--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title lang="en">Helen</title>
-  
+  <link rel="stylesheet" href="./css/modern-normalize.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
 
@@ -19,6 +19,8 @@
 
   <main>
 
+
+    <!-- Секция "Как мы это делаем"-->
     <include src="./partials/how-we-do-it.html"></include>
     <include src="./partials/we_garants_comments.html"></include>
 
