--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+      crossorigin="anonymous"
+    />
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <title>HellEn</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-    crossorigin="anonymous" />
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
-  <title>HellEn</title>
-</head>
+  <body>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/problems.html"></include>
+    <include src="./partials/how.html"></include>
+    <include src="./partials/program.html"></include>
+    <include src="./partials/teacher.html"></include>
+    <include src="./partials/guarantee.html"></include>
+    <include src="./partials/reviews.html"></include>
+    <include src="./partials/registration-form.html"></include>
+    <include src="./partials/footer.html"></include>
 
-<body>
-  <include src="./partials/header.html"></include>
-  <include src="./partials/hero.html"></include>
-  <include src="./partials/problems.html"></include>
-  <include src="./partials/how.html"></include>
-  <include src="./partials/program.html"></include>
-  <include src="./partials/teacher.html"></include>
-  <include src="./partials/guarantee.html"></include>
-  <include src="./partials/reviews.html"></include>
-  <include src="./partials/registration-form.html"></include>
-  <include src="./partials/footer.html"></include>
-
-  <script src="./index.js"></script>
-  <script src="./scripts/script.js"></script>
-</body>
-
+    <script src="./index.js"></script>
+    <script src="./scripts/script.js"></script>
+  </body>
 </html>
