--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,52 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
+    <section class="contacts-card">
+      <div class="container">
+      <ul class="contacts-card-list">
+        <li class="contacts-card-item">
+          <h4 class="item-header-one">CAFE</h4>
+          <span class="item-town">Chicago</span>
+          <span class="item-info">Fusce ut velit laoreet, tempus arcu molestie vulputate</span>
+          <span class="working-day">Monday - Friday</span>
+          <span class="working-time">06:00 AM - 10:00 PM</span>
+          <span class="working-day">Saturday - Sunday</span>
+          <span class="working-time">08:00 AM - 16:00 PM</span>
+          <a class="card-phone" href="tel:+610383766284">+61(0) 383 766 284</a>
+          <a class="card-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+        </li>
+        <li class="contacts-card-item">
+          <h4 class="item-header-two">FOODTRUCK</h4>
+          <span class="item-town">Los Angeles</span>
+          <span class="item-info">Fusce ut velit laoreet, tempus arcu molestie vulputate</span>
+          <span class="working-day">Monday - Friday</span>
+          <span class="working-time">06:00 AM - 10:00 PM</span>
+          <span class="working-day">Saturday - Sunday</span>
+          <span class="working-time">08:00 AM - 16:00 PM</span>
+          <a class="card-phone" href="tel:+610383766284">+61(0) 383 766 284</a>
+          <a class="card-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+        </li>
+        <li class="contacts-card-item">
+          <h4 class="item-header-three">CAFE</h4>
+          <span class="item-town">New York</span>
+          <span class="item-info">Fusce ut velit laoreet, tempus arcu molestie vulputate</span>
+          <span class="working-day">Monday - Friday</span>
+          <span class="working-time">06:00 AM - 10:00 PM</span>
+          <span class="working-day">Saturday - Sunday</span>
+          <span class="working-time">08:00 AM - 16:00 PM</span>
+          <a class="card-phone" href="tel:+610383766284">+61(0) 383 766 284 </a>
+          <a class="card-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+        </li>
+      </ul>
+        
+      <div class="contacts-card-btn">
+          <button>Our Locations <span>></span></button>
+          <button>Our Locations <span>></span></button>
+        </div>
+    
+    </div>
+    </section>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
