--- a/src/index.html
+++ b/src/index.html
@@ -17,31 +17,31 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- Header -->
-    <!-- <include src="./partials/header.html"></include> -->
+    <include src="./partials/header.html"></include>
 
     <main>
       <!-- Hero -->
-      <!-- <include src="./partials/hero.html"></include> -->
+      <include src="./partials/hero.html"></include>
       <!-- Feature -->
-      <!-- <include src="./partials/feature.html"></include> -->
+      <include src="./partials/feature.html"></include>
       <!-- Problems -->
       <include src="./partials/problems.html"></include>
       <!-- Realization -->
-      <!-- <include src="./partials/realization.html"></include> -->
+      <include src="./partials/realization.html"></include>
       <!-- Our program -->
-      <!-- <include src="./partials/our-program.html"></include> -->
+      <include src="./partials/our-program.html"></include>
       <!-- Teacher -->
-      <!-- <include src="./partials/teacher.html"></include> -->
+      <include src="./partials/teacher.html"></include>
       <!-- Our guarantees -->
-      <!-- <include src="./partials/our-guarantees.html"></include> -->
+      <include src="./partials/our-guarantees.html"></include>
       <!-- Reviews -->
-      <!-- <include src="./partials/reviews.html"></include> -->
+      <include src="./partials/reviews.html"></include>
       <!-- registration -->
-      <!-- <include src="./partials/registration.html"></include> -->
+      <include src="./partials/registration.html"></include>
     </main>
 
     <!-- Footer -->
-    <!-- <include src="./partials/footer.html"></include> -->
+    <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
