визначили секцію, контейнер

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     
     <include src="./partials/page-header.html"></include>
     <include src="./partials/hero.html"></include>
-    <include src="./partials/feautures.html"></include>
+    <include src="./partials/features.html"></include>
     <include src="./partials/general-problem.html"></include>
     <include src="./partials/advantage.html"></include>
     <include src="./partials/our-programm.html"></include>
