--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/advantages.html"></include>
+    <include src="./partials/choose.html"></include>
     <include src="./partials/feedback.html"></include>
     <include src="./partials/modal.html"></include>
 
