Добавила названию секции locations

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
     <include src="./partials/production.html"></include>
     <include src="./partials/galary.html"></include>
     <include src="./partials/locations.html"></include>
+    <section class="locations">
+      Проба пера
+    </section>
     <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
