--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <include src="./partials/locations.html"></include>
     <section class="locations">
       Проба пера
+      IceCreame
     </section>
     <include src="./partials/footer.html"></include>
 
