--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
-    <include src="./partials/hero.html"></include>npm run dev
+    <include src="./partials/hero.html"></include>
     <main>
       <include src="./partials/products.html"></include>
       <include src="./partials/how-made.html"></include>
