--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <include src="./partials/home.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/production.html"></include>
+    <include src="./partials/galary_photo.html"></include>
     <include src="./partials/galary.html"></include>
     <include src="./partials/locations.html"></include>
     <include src="./partials/footer.html"></include>
