section cod+main css

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,42 @@
     />
   </head>
   <body>
+    <section class="container">
+      <span class="advantages">100% natural</span>
+      <h2 class="products-title">products</h2>
+      <ul class="products">
+        <li class="products-item">
+          <picture>
+
+          </picture>
+          <svg></svg>
+          <div>
+             <h3>ice cream</h3>
+             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</span>
+           </div>
+        </li>
+        <li class="products-item">
+          <picture>
+
+          </picture>
+          <svg></svg>
+          <div>
+             <h3>ice coffee</h3>
+             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</span>
+           </div>
+        </li>
+        <li class="products-item">
+          <picture>
+
+          </picture>
+          <svg></svg>
+          <div>
+             <h3>milkshakes</h3>
+             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</span>
+            </div>
+        </li>
+      </ul>
+    </section>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/hero.html"></include>npm run dev
