--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <body>
     <include src='./partials/hero.html'></include>
     <include src='./partials/advantages.html'></include>
+    <include src='./partials/teacher.html'></include>
+    <include src='./partials/guarantees.html'></include>
     
     <script src="./index.js"></script>
   </body>
