--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
     <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="./js/menu.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./index.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
