--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-
+    <main>
+      <div>
+        <p>i`m here</p>
+      </div>
+    </main>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
