--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,15 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-<<<<<<< HEAD
     <main>
       <div>
         <p>i`m here</p>
       </div>
     </main>
-=======
 
     <include src="./partials/one_more_page.html"></include>
+    <include src="./partials/firstfille.html"></include>
 
->>>>>>> Pauls_branch
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
