--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
+    <include src="./partials/section.html"></include>
+
     <div class="section"></div>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
