--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,14 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/header.html"></include>
 
-    
-    <include src="./partials/section.html"></include>
-
-    <div class="section"></div>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/products.html"></include>
+    <include src="./partials/description.html"></include>
+    <include src="./partials/review.html"></include>
+    <include src="./partials/locations.html"></include>
+    <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
