--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <include src="./partials/description.html"></include>
 
     <!-- Николай Сенюк -->
-    <!-- <include src="./partials/problems.html"></include> -->
+    <include src="./partials/problems.html"></include>
 
     <!-- Богдан Гладкий -->
     <include src="./partials/method.html"></include>
@@ -35,7 +35,7 @@
     <include src="./partials/program.html"></include>
 
     <!-- Николай Сенюк -->
-    <!-- <include src="./partials/features.html"></include> -->
+    <include src="./partials/features.html"></include>
 
     <!-- Игорь Гладкий -->
     <include src="./partials/teacher.html"></include>
