--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
     <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="./js/burger-menu.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
