completes programme and reasons sections adaptive coding

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <include src="./partials/advantages.html"></include>
     <include src="./partials/benefits.html"></include>
     <include src="./partials/description.html"></include>
+    <include src="./partials/programme-reasons.html"></include>
     <script src="./index.js"></script>
   </body>
 </html>
