Добвавляет слайдер к проекту

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    </head>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  </head>
   <body class="body">
 
     <header>
@@ -20,9 +22,18 @@
 
     <footer>
     </footer>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-   
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+
   <script src="./index.js"></script>
+  <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
+    <script type="text/javascript" src="./slider.js">
+    </script>
   </body>  
 </html>
