--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
 
