--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
   </head>
-  <body>
+  <body class="page">
     <!-- Паршалы -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
@@ -31,8 +31,12 @@
     <include src="./partials/reviews.html"></include>
     <include src="./partials/reg-form.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/backdrop-modal.html"></include>
 
     <!-- Скрипты -->
     <script src="./index.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="./js/menu-modal.js"></script>
   </body>
 </html>
