--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-      rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="stylesheet" href="./css/main.min.css">
-    <title>ICE CREAM</title>
-  </head>
-  <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/header.html"></include>
-    <include src="./partials/home.html"></include>
-    <include src="./partials/products.html"></include>
-    <include src="./partials/production.html"></include>
-    <include src="./partials/galary.html"></include>
-    <include src="./partials/locations.html"></include>
-    <include src="./partials/footer.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <!-- <link rel="stylesheet" href="./css/main.min.css"> -->
+  <title>ICE CREAM</title>
+</head>
+
+<body>
+  <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+  <!-- <include src=" ./partials/header.html">
+  </include> -->
+  <include src="./partials/home.html"></include>
+  <include src="./partials/products.html"></include>
+  <include src="./partials/production.html"></include>
+  <include src="./partials/galary.html"></include>
+  <include src="./partials/locations.html"></include>
+  <include src="./partials/footer.html"></include>
+
+  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./index.js"></script>
+</body>
+
 </html>
