--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <!-- Секция "Как мы это делаем"-->
     <include src="./partials/how-we-do-it.html"></include>
     <include src="./partials/we_garants_comments.html"></include>
+    <include src="./partials/registration.html"></include>
 
   </main>
 
