в секцию мигаранируем добавил иконки

--- a/src/index.html
+++ b/src/index.html
@@ -17,38 +17,38 @@
 
   <body class="page">
     <!-- Марина Заквацкая  -->
-    <include src="./partials/header.html"></include>
+    <!-- <include src="./partials/header.html"></include> -->
 
     <!-- Ирина Сыдорук -->
-    <include src="./partials/hero.html"></include>
+    <!-- <include src="./partials/hero.html"></include> -->
 
     <!-- Анастасия -->
-    <include src="./partials/description.html"></include>
+    <!-- <include src="./partials/description.html"></include> -->
 
     <!-- Николай Сенюк -->
-    <include src="./partials/problems.html"></include>
+    <!-- <include src="./partials/problems.html"></include> -->
 
     <!-- Богдан Гладкий -->
-    <include src="./partials/method.html"></include>
+    <!-- <include src="./partials/method.html"></include> -->
 
     <!-- Максим Крамар -->
-    <include src="./partials/program.html"></include>
+    <!-- <include src="./partials/program.html"></include> -->
 
     <!-- Николай Сенюк -->
-    <include src="./partials/features.html"></include>
+    <!-- <include src="./partials/features.html"></include> -->
 
     <!-- Игорь Гладкий -->
-    <include src="./partials/teacher.html"></include>
+    <!-- <include src="./partials/teacher.html"></include> -->
 
     <!--Олег Огирок  -->
     <include src="./partials/guarantee.html"></include>
-    <include src="./partials/feedback.html"></include>
+    <!-- <include src="./partials/feedback.html"></include> -->
 
     <!-- Марина Думберг -->
-    <include src="./partials/registration.html"></include>
+    <!-- <include src="./partials/registration.html"></include> -->
 
     <!-- Анастасия -->
-    <include src="./partials/footer.html"></include>
+    <!-- <include src="./partials/footer.html"></include> -->
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
