--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,14 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/header.html"></include>
+    <!-- <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
-    <include src="./partials/products.html"></include>
+    <include src="./partials/products.html"></include> -->
     <include src="./partials/traditions.html"></include>
-    <include src="./partials/reviews-bg-photo.html"></include>
+    <!-- <include src="./partials/reviews-bg-photo.html"></include>
     <include src="./partials/reviews.html"></include>
     <include src="./partials/locations.html"></include>
-    <include src="./partials/footer.html"></include>
+    <include src="./partials/footer.html"></include> -->
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
