--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
-    <!-- <include src="./partials/manufacture.html"></include> -->
+    <include src="./partials/manufacture.html"></include>
     <include src="./partials/review.html"></include>
     <include src="./partials/location.html"></include>
     <include src="./partials/footer.html"></include>
