--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,13 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <!-- <include src="./partials/header.html"></include>
+    <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
-    <include src="./partials/products.html"></include> -->
+    <include src="./partials/products.html"></include>
     <include src="./partials/manufacture.html"></include>
-    <!-- <include src="./partials/review.html"></include>
+    <include src="./partials/review.html"></include>
     <include src="./partials/location.html"></include>
-    <include src="./partials/footer.html"></include> -->
+    <include src="./partials/footer.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
