--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <body>
     
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <!-- <include src="./partials/example.html"></include> -->
+    <include src="./partials/main_problems_and_teacher.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
