--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
     <!-- Секция "Как мы это делаем"-->
     <include src="./partials/how-we-do-it.html"></include>
+    <include src="./partials/programm+why-us.html"></include>
     <include src="./partials/we_garants_comments.html"></include>
     <include src="./partials/registration.html"></include>
 
