--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
       <!-- ===============METHODS=============== -->
       <include src="./partials/methods.html"></include>
 
+      <!-- ===============METHODS=============== -->
+      <include src="./partials/choose.html"></include>
+      
       <!-- ===============PROGRAMS=============== -->
       <include src="./partials/programs.html"></include>
 
