внесла изменения после обновления

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,10 @@
 
 
     <!-- Секция "Как мы это делаем"-->
+    <include src="./partials/main_problems.html"></include>
     <include src="./partials/how-we-do-it.html"></include>
     <include src="./partials/programm+why-us.html"></include>
+    <include src="./partials/teacher.html"></include>
     <include src="./partials/we_garants_comments.html"></include>
     <include src="./partials/registration.html"></include>
 
