--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <include src="./partials/hero.html"></include>
   <include src="./partials/products.html"></include>
   <include src="./partials/howIItsMade.html"></include>
+  <include src="./partials/images.html"></include>
   <include src="./partials/coments.html"></include>
   <include src="./partials/boxes.html"></include>
   <include src="./partials/footer.html"></include>
