Добавлен слайдер и картинки

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,9 @@
 
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="./script.js"></script>
   <script src="./index.js"></script>
 </body>
-
 </html>
