закончил первую секцию, сделал вторую секцию і моб версии.

--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
     <!-- <include src="./partials/teacher.html"></include> -->
 
     <!--Олег Огирок  -->
-    <include src="./partials/guarantee.html"></include>
-    <!-- <include src="./partials/feedback.html"></include> -->
+    <!-- <include src="./partials/guarantee.html"></include> -->
+    <include src="./partials/feedback.html"></include>
 
     <!-- Марина Думберг -->
     <!-- <include src="./partials/registration.html"></include> -->
