Добавила секцию registration

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
       <include src="./partials/program-section.html"></include>
       <include src="./partials/section-teacher.html"></include>
       <include src='./partials/reviews.html'></include>
+      <include src='./partials/registration.html'></include>
 
     </main>
     <footer>
