--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css
-">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <title>Заголовок страницы</title>
 </head>
 
@@ -21,11 +20,12 @@
   <include src="./partials/coments.html"></include>
   <include src="./partials/boxes.html"></include>
   <include src="./partials/footer.html"></include>
-
+  <include src="./partials/_arrowUp.html"></include>
 
 
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./main.js"></script>
   <script src="./index.js"></script>
 </body>
 
