--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,22 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>ICE CREAM</title>
   </head>
-  <body>
+  <!-- basic styling just for this demo -->
+  <style type="text/css" media="screen">
+    * {
+      margin: 0 auto;
+    }
+  
+    #wrapper {
+      width: 1280px;
+      margin: 15px auto;
+    }
+  
+    p {
+      margin: 20px 0;
+    }
+  </style>
+  <body id="wrapper">
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
   <main>
@@ -28,6 +43,29 @@
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
+    <!-- jquery -->
+    <script src="./js/jquery-1.7.2.min.js" type="text/javascript"></script>
+    <!-- easing plugin ( optional ) -->
+    <script src="./js/easing.js" type="text/javascript"></script>
+    <!-- UItoTop plugin -->
+    <script src="./js/jquery.ui.totop.js" type="text/javascript"></script>
+    <script src="./js/jquery.ui.totop.min.js" type="text/javascript"></script>
+    <!-- Starting the plugin -->
+    <script type="text/javascript">
+      $(document).ready(function () {
+        /*
+        var defaults = {
+            containerID: 'toTop', // fading element id
+          containerHoverID: 'toTopHover', // fading element hover id
+          scrollSpeed: 1200,
+          easingType: 'linear' 
+          };
+        */
+
+        $().UItoTop({ easingType: 'easeOutQuart' });
+
+      });
+      </script>
+      <script src="./index.js"></script>
   </body>
 </html>
