Add choose again

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
       <!-- ===============PROGRAMS=============== -->
       <include src="./partials/programs.html"></include>
 
+      <!-- ===============CHOOSE=============== -->
+      <include src="./partials/choose.html"></include>
+
       <!-- ===============TEACHER=============== -->
       <include src="./partials/teacher.html"></include>
 
