--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
   </head>
 
-  <body class="body">
+  <body class="body" data-body>
 
     <header>
       <include src="./partials/page-header.html"></include>
@@ -37,6 +37,8 @@
     <footer>
      <include src="./partials/page-footer.html"></include>
     </footer>
+
+    <include src="./partials/backdrop.html"></include>
     
     <script
       type="text/javascript"
@@ -52,5 +54,6 @@
   </body>  
     <script src="./menu.js"></script>
     <script src="./index.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
