Изменил верстку секции под слайдер. Подключил слайдер через CDN и добавив файл slider.js с кодом для инициализации слайдера. Перезалил адаптивные изображения  карточки и элементов слайдера-карусели. Добавил иконки для стрелок слайдера. Прописал стили для слайдера-карусели, создав элемент с классом wrapper в файле _reviews.html и написав для него стили в файле _reviews.scss.

--- a/src/index.html
+++ b/src/index.html
@@ -37,5 +37,10 @@
     <script src="./index.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="./js/menu-modal.js"></script>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+    <script src="./js/slider.js"></script>
   </body>
 </html>
