Добавляет паршал header.html и строку его подключения в index.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
 
 <body>
 
-  <header>
-  </header>
+  <!-- Шапка сайта, HEADER -->
+  <include src="./partials/header.html"></include>
 
   <main>
 
