Добавляет стили для header и подключает скрипт открытия\закрытия меню

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,9 @@
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script src="./index.js"></script>
+
+  <!-- Скрипт открытия/закрытия мобильного и планшетного меню -->
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
