--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <include src="./partials/header.html"></include>
 
   <main>
-
+    <include src="./partials/hero.html"></include>
 
     <!-- Секция "Как мы это делаем"-->
     <include src="./partials/how-we-do-it.html"></include>
