Добавляет часть разметки Хедера

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
     <title>Hell EN</title>
   </head>
   <body>
+    <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/benefits.html"></include>
@@ -24,7 +24,11 @@
     <include src="./partials/programme-reasons.html"></include>
     <include src='./partials/teacher.html'></include>
     <include src='./partials/guarantees.html'></include>
+    <!-- <include src='./partials/reviews.html'></include> -->
     <include src="./partials/form.html"></include>
+    
+
+    <script src="./menu.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
