--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
   <!-- basic styling just for this demo -->
   <style type="text/css" media="screen">
     * {
-      margin: 0 auto;
+      /* margin: 0 auto; */
+      margin: 0;
     }
     p {
       margin: 0px 0;
