--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
     />
   </head>
   <body>
-    <include src="./partials/header.html"></include>
+    <!-- <include src="./partials/header.html"></include> -->
     <main>
-      <include src="./partials/hero.html"></include>
+      <!-- <include src="./partials/hero.html"></include> -->
       <include src="./partials/advantages.html"></include>
       <include src="./partials/main-issues.html"></include>
       <include src="./partials/methods.html"></include>
