Разкомментил секции, которые убирал, проверяя баги

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
 <body>
 
   <!-- Шапка сайта, HEADER -->
-  <!-- <include src="./partials/header.html"></include> -->
+  <include src="./partials/header.html"></include>
 
   <main>
-    <!-- <include src="./partials/hero.html"></include> -->
+    <include src="./partials/hero.html"></include>
 
     <!-- Секция "Как мы это делаем"-->
     <include src="./partials/main_problems.html"></include>
