--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Заголовок страницы</title>
+    <title>Ice cream</title>
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
