Добавляет разметку футера

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <include src='./partials/guarantees.html'></include>
     <!-- <include src='./partials/reviews.html'></include> -->
     <include src="./partials/form.html"></include>
+    <include src="./partials/footer.html"></include>
     
 
     <script src="./menu.js"></script>
