--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <include src="./partials/programme-reasons.html"></include>
     <include src='./partials/teacher.html'></include>
     <include src='./partials/guarantees.html'></include>
-    <!-- <include src='./partials/reviews.html'></include> -->
+    <include src='./partials/reviews.html'></include>
     <include src="./partials/form.html"></include>
     <include src="./partials/footer.html"></include>
     
